Frontend filters seem to work, but do not yet cooperate with the backend
Former-commit-id: f9f74e745e535b7ca998ad806b500bf419c7a5a1

--- a/landmatrix/static/css/content.css
+++ b/landmatrix/static/css/content.css
@@ -2002,6 +2002,18 @@ a.remove-ybd:hover {
     color: #4a4a4a;
 }
 
+.filter_active {
+    background-color: #44c42d;
+    color: #4a4a4a;
+}
+
+.filter_active a:focus,
+.filter_active a:hover {
+    background-color: #fc941f;
+    color: #fcfcfc;
+    text-decoration: none;
+}
+
 .form-horizontal .checkbox,
 .form-horizontal .radio {
     padding-top: 0;
