--- a/grid/templates/global_base.html
+++ b/grid/templates/global_base.html
@@ -69,5 +69,5 @@
 {% block js %}
     <script src="{% static "js/editor/detail.js" %}" type="text/javascript" charset="utf-8"></script>
     <script src="{% static "legacy/vendor/jquery.stickytableheaders.js" %}" type="text/javascript" charset="utf-8"></script>
-    <script src="{% static "legacy/js/script.js" %}" type="text/javascript" charset="utf-8"></script>
+    <script src="{% static "legacy/main.js" %}" type="text/javascript" charset="utf-8"></script>
 {% endblock %}
