--- a/templates/filters.html
+++ b/templates/filters.html
@@ -167,9 +167,15 @@
                 var label = '<label>{% trans "Active Filters" %}:</label>';
                 tags.append(label);
 
+                var filternames = [];
+
                 for (item in data) {
-                    var tag = data[item].name;
-                    var finalHtml = tag + '<a class="delete-row" href="javascript:removeFilter(\'' + tag + '\')"><i class="lm lm-times"></i></a>';
+                    var tag = data[item].variable[0];
+                    if (filternames.indexOf(tag) >= 0) {
+                        tag = data[item].variable[0] + " " + data[item].operator[0];
+                    }
+                    filternames.push(tag);
+                    var finalHtml = tag + '<a class="delete-row" href="javascript:removeFilter(\'' + data[item].name + '\')"><i class="lm lm-times"></i></a>';
                     finalHtml = '<span class="label label-filter">' + finalHtml + '</span>';
                     $(finalHtml).appendTo(tags);
                     console.log("Tag appended.", tag, tags);
@@ -183,7 +189,7 @@
 
             function removeFilter(filterName) {
                 $.post(
-                        "/api/filter.json?action=remove&" + filterName,
+                        "/api/filter.json?action=remove&name=" + filterName,
                         updateFilters
                 );
             }
@@ -237,11 +243,12 @@
                 $("form").submit(function (e) {
                     e.preventDefault();
                     var form = $(this);
-                    data = form.serialize();
-                    console.log("This is what i'm transmitting:", data);
-                    $.post('/api/filter.json?action=set&name='+currentVariable + "&" + data, success = function (foo) {
-                        console.log("Result:", foo);
-                    });
+                    var data = form.serialize();
+
+                    $.post(
+                            '/api/filter.json?action=set&' + data,
+                            updateFilters
+                    );
                 });
 
             });
