--- a/grid/templates/deal-detail.html
+++ b/grid/templates/deal-detail.html
@@ -21,6 +21,8 @@
     <script src="{% static "vendor/openlayers/ol.js" %}" type="text/javascript"></script>
     <script src="{% static "js/editor/detail.js" %}" type="text/javascript" charset="utf-8"></script>
     <script src="{% static "js/editor/map.js" %}" type="text/javascript" charset="utf-8"></script>
+
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB59at4M4o0ERqk8OkvZOYjxH7N-8_HkNE&libraries=places"></script>
 {% endblock %}
 
 {% block page_title %}{% trans "Deal" %} #{{ deal.activity_identifier }}{% endblock %}
@@ -55,17 +57,20 @@
                              class="panel-collapse collapse{% if forloop.first %} in {% endif %}">
                             <div class="panel-body">
                                 {% for field in form.get_fields_display %}
-                                    {% if field.0 == 'tg' %}
-                                    <h3>{{ field.1 }}</h3>
+                                    {% if field.name == 'tg' %}
+                                    <h3>{{ field.value }}</h3>
                                     {% else %}
-                                        <div class="row">
+                                        <div class="row {{ field.name }}">
                                             <div class="col-md-3">
-                                                {{ field.0 }}
+                                                {{ field.label }}
                                             </div>
                                             <div class="col-md-9">
-                                                {{ field.1|safe }}
+                                                {{ field.value|safe }}
                                             </div>
                                         </div>
+                                        {% if field.name == 'location' %}
+                                        <div class="map"></div>
+                                        {% endif %}
                                     {% endif %}
                                 {% endfor %}
                             </div>
@@ -169,4 +174,16 @@
     </p>
 {% endif %}
 
+<script type="text/javascript">
+$(document).ready(function () {
+    var count = 0;
+    $('.map').each(function () {
+        count++;
+        var lat = parseFloat($('.point_lat div:last-child').text()),
+            lon = parseFloat($('.point_lon div:last-child').text());
+        $(this).attr('id', 'map-' + count);
+        initializeMap(count, lat, lon);
+    })
+})
+</script>
 {% endblock %}
