Filters also work in the map!
Former-commit-id: 2c70124bb624b3523f2bc55310d99b3debefdd5b

--- a/map/templates/map/map.html
+++ b/map/templates/map/map.html
@@ -61,6 +61,7 @@
 
 <script type="text/javascript" src="{% static "js/map.js" %}"></script>
 <script type="text/javascript" src="{% static "js/layers.js" %}"></script>
+<script type="text/javascript" src="{% static "legacy/main.js" %}"></script>
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB59at4M4o0ERqk8OkvZOYjxH7N-8_HkNE&libraries=places"></script>
 
